[gd_scene load_steps=25 format=3 uid="uid://csuqsg5guxwiv"]

[ext_resource type="Script" path="res://Modules/Player.gd" id="1_11vu6"]
[ext_resource type="PackedScene" uid="uid://dpkpxh578lq7e" path="res://Modules/Components/HealthComponent.tscn" id="2_l21se"]
[ext_resource type="PackedScene" uid="uid://clixlxwi30ajs" path="res://Modules/Projectiles/CherryProjectile.tscn" id="2_mpw5p"]
[ext_resource type="Texture2D" uid="uid://b8oyeymbbngnm" path="res://assets/Player/Player-IDLE.png" id="3_tbrnd"]
[ext_resource type="Texture2D" uid="uid://b7wfwt4iigjs6" path="res://assets/Player/Player-THROW.png" id="4_afeie"]
[ext_resource type="Texture2D" uid="uid://i68avcmiksgl" path="res://assets/Player/Player-WALK.png" id="5_er7up"]
[ext_resource type="Texture2D" uid="uid://5quvt528v850" path="res://assets/crosshair16.png" id="5_o60kx"]
[ext_resource type="Texture2D" uid="uid://dfqq533jnbjit" path="res://assets/light.png" id="6_8hlg6"]
[ext_resource type="PackedScene" uid="uid://73ctti0pay2o" path="res://Modules/Light.tscn" id="7_yfx6o"]
[ext_resource type="Texture2D" uid="uid://cjpgm8ywe274d" path="res://assets/UI/InteractButton.png" id="8_x257u"]

[sub_resource type="Animation" id="Animation_k7mho"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_nan78"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8yffy"]
resource_name = "Throwing"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Throw"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_egdk8"]
resource_name = "Walking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walking"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rk5v6"]
_data = {
"Idle": SubResource("Animation_k7mho"),
"RESET": SubResource("Animation_nan78"),
"Throwing": SubResource("Animation_8yffy"),
"Walking": SubResource("Animation_egdk8")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_76r57"]
atlas = ExtResource("3_tbrnd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw5s8"]
atlas = ExtResource("3_tbrnd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbp2d"]
atlas = ExtResource("4_afeie")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3k5d"]
atlas = ExtResource("4_afeie")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i80ou"]
atlas = ExtResource("5_er7up")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox512"]
atlas = ExtResource("5_er7up")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vv08c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76r57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw5s8")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbp2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3k5d")
}],
"loop": true,
"name": &"Throw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i80ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox512")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5s13h"]
size = Vector2(12, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_c88uc"]
radius = 15.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 16
script = ExtResource("1_11vu6")
base_movement_speed = 100
cherry_projectile = ExtResource("2_mpw5p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rk5v6")
}
autoplay = "Idle"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_vv08c")
animation = &"Idle"
autoplay = "Idle"

[node name="HealthComponent" parent="." instance=ExtResource("2_l21se")]
max_health = 100.0
health_regeneration = 0.2

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(1, -8)
shape = SubResource("RectangleShape2D_5s13h")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -16)
process_callback = 0
limit_left = -1750
limit_top = -750
limit_right = 2250
limit_bottom = 1250
position_smoothing_enabled = true

[node name="InteractionZone" type="ShapeCast2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_c88uc")
target_position = Vector2(0, 0)
max_results = 1
collision_mask = 256
collide_with_areas = true
collide_with_bodies = false

[node name="CherrySprintTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Crosshair" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.65098)
z_index = 11
texture_filter = 1
position = Vector2(63, -8)
texture = ExtResource("5_o60kx")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, -16)
blend_mode = 2
texture = ExtResource("6_8hlg6")
texture_scale = 0.2

[node name="Light" parent="." instance=ExtResource("7_yfx6o")]
offset = Vector2(0, -16)

[node name="InteractionDisplay" type="TextureRect" parent="."]
visible = false
z_index = 11
texture_filter = 1
offset_left = 12.0
offset_top = -39.0
offset_right = 28.0
offset_bottom = -23.0
texture = ExtResource("8_x257u")
